--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -11,7 +11,7 @@
     {% load staticfiles %}
     {% load imagekit %}
     <title>Imaginit</title>
-    <link rel='shortcut icon' href= "{% static "main/images/logo.png" %}" type='image/x-icon' />
+    <link rel='shortcut icon' href= "{% static "main/images/logo.PNG" %}" type='image/x-icon' />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href= "https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
      <link href="{% static "main/css/social.css"%}" rel="stylesheet">
@@ -30,11 +30,21 @@
     <script>
     	function fun()
     	{
-    	    location.href="manip"
+    	    location.href="/manip/";
     	}
+        function Manipulation()
+        {
+            location.href="/home/";
+        }
     </script>
+    <style>
+    body
+    {
+        background-image : url("/static/main/images/bg1.jpg");
+    }
+    </style>
 </head>
-<body ng-app="Slidebox" style="width:100%;" background="static/main/images/background.jpg">
+<body ng-app="Slidebox" style="width:100%;" >
 {% block content %}
     
 {% endblock%}
