--- a/main/templates/main/meffects.html
+++ b/main/templates/main/meffects.html
@@ -1,9 +1,9 @@
 {% block content%}
-<!--<slidebox content-width="200%" class="my-slidebox" content-class="my-slidebox-content">-->
+<slidebox content-width="200%" class="my-slidebox" content-class="my-slidebox-content">
     <ul class="row effects">
         {%for effect in meffects %}
-        <li class="effect-box btn-primary" background="/static/main/images/thumbnails/manipulation/{{effect}}.PNG" id="{{effect}}1"><a>{{effect}}</a></li>
+        <li class="effect-box btn-primary" background="/static/main/images/thumbnails/effects/{{effect}}.PNG" id="{{effect}}1"><a>{{effect}}</a></li>
         {% endfor %}
     </ul>
-<!--</slidebox>-->
+</slidebox>
 {% endblock %}
